--- a/PG-plugin/www/index.html
+++ b/PG-plugin/www/index.html
@@ -11,7 +11,7 @@
             function onDeviceReady() {
                 //回调方法
                 function jscallback(result){
-                    $('#div_result').html(decodeURI(result));
+                    $('#div_result').html(result);
                 }
                 $(function(){
                   //
@@ -52,7 +52,7 @@
 
     </head>
     <body>
-        <h3>phoneGap </h3>
+        <h3>phoneGap-plugin </h3>
         <hr>
         <div id="div_result" style='color:red'></div>
         <div>
